--- a/scr/style/style.css
+++ b/scr/style/style.css
@@ -136,5 +136,28 @@ canvas {
   top: 0;
   left: 0;
   /*--Borrar esto luego que para pruebas--*/
-  border: 3px solid violet;
 }
+
+
+/*--Video redimensionando--*/
+.section2 {
+  margin: 10px;
+  padding: 20px;
+  background: white;
+  border-radius: 4px;
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+}
+.video-container {
+  position: relative;
+  padding-bottom: 100%;
+  padding-top: 16px; height: 0; overflow: hidden;
+}
+
+.video-container video,
+.video-container object,
+.video-container embed {
+  width: 100%;
+  height: auto;
+  top: 0;
+  left: 0;
+}/** Buscar codigo para ajustar el scroll de la barra que se oculta **/
